# minecraft-bot

./: .env.example  .gitignore  LICENSE  README.md  build.gradle  gradle.properties  main.py  pyproject.toml  settings.gradle  setup.bat  测试指南.md
backend/: .env.example  .gitignore  dcbot.py  embedding.py  main.py  pyproject.toml  rag_builder.py
backend/faiss_db/: index.pkl
backend/loaded_docs/: Biome – Minecraft Wiki.html  Block – Minecraft Wiki.html  Brewing – Minecraft Wiki.html  Commands – Minecraft Wiki.html  Crafting – Minecraft Wiki.html  Effect – Minecraft Wiki.html  Enchanting – Minecraft Wiki.html  Item – Minecraft Wiki.html  Mob – Minecraft Wiki.html  Redstone circuits – Minecraft Wiki.html  Smelting – Minecraft Wiki.html  Smithing – Minecraft Wiki.html  Structure – Minecraft Wiki.html  Trading – Minecraft Wiki.html  biomes.txt  commands.txt  enchantments.txt  food_stats.txt  game_rules.txt  mobs_stats.txt  redstone.txt  server_properties.txt  status_effects.txt  villager_trading.txt
mods/: .env.example  gradle.properties  gradlew.bat
mods/run/: eula.txt  options.txt  server.properties  usercache.json
mods/run/config/fabric/: indigo-renderer.properties
mods/run/saves/New World/: level.dat_old
mods/run/world/: level.dat_old
mods/run/world/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.0.mca
mods/run/world/playerdata/: 293a5820-032f-4376-a09a-351d69598ab9.dat_old
run/config/: aichatbot.json
run/world/advancements/: 293a5820-032f-4376-a09a-351d69598ab9.json
run/world/entities/: r.0.-1.mca
run/world/region/: r.1.-1.mca
(+29 files in other folders)
