[project]
name = "mcbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.3",
    "ollama>=0.6.1",
    "py-cord>=2.7.0",
    "uvicorn>=0.40.0",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "langchain-community",
    "langchain-text-splitters",
    "huggingface_hub",
    "faiss-cpu",
    "unstructured",
    "unstructured[docx,pdf]",
    "pypdf",
    "sentence-transformers"
]
